attempt to correct brand spacing on mobile

--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -16,7 +16,6 @@
 }
 
 .logo {
-  width: auto;
   height: 95%;
   padding: 5px;;
 }
